--- a/assets/sass/components/_home-about-item.scss
+++ b/assets/sass/components/_home-about-item.scss
@@ -1,6 +1,6 @@
 .home-about__item {
   background: $abyss;
-  padding: 4em 3em;
+  padding: 4em 0;
   margin-top: 1em;
   position: relative;
   cursor: pointer;
@@ -33,7 +33,10 @@
 
     li {
       border-bottom: 1px solid $blue;
-      display: inline-block;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 90%;
       padding: 1em;
 
       &:last-child {
